# hackathon_new

./: .gitignore  .gitmodules  Everscale_Wallets_Tokens.md  README.md  Tezos_Bridge_Tzwrap.md  index.html  main.fbfc5f948f0dabdf.js  package.json  styles.55141b7d5b51e7e3.css
Create_And_Transfer_TokenTz/: Comment_contract.ligo  Comment_transaction.ts  Listen_Wallet.ts  Readme.md  account.json  account2.json  fa2-token-factory.ts  package.json  storage.tz  tezos.ts  token-deploy.ts  token-deployFA2.ts  token-transfer.ts  token.json  tokenfa12.json  transfer.ts
HTLC/: ContractABI.js  HTLC_contract.pascaligo  HTLC_contract_token.pascaligo  HTLC_contract_token1.pascaligo  Hashlock_contract.pascaligo  README.md  READ_ME.md  READ_ME.md.orig  Readme.md  call_htlc_contract.ts  call_htlc_contract.ts.orig  call_htlc_contract_with_tokens.ts  contract.abi.json  contract.code  contract.sol  contract.tvc  deploy_htlc_contract.ts  deploy_htlc_contract.ts.orig  htlc_contract.ts  htlc_contract.tz  htlc_contract_token1.tz  htlc_contract_tokens.tz  htlc_contract_tokens.tz.orig  index.ts  package.json
HTLC/hello-wallet/:     encodePayload.ts  HelloWallet.abi.json  HelloWallet.code  HelloWallet.sol  HelloWallet.ts  HelloWallet.tvc  encodePayload.ts  index.ts  keys.json  package-lock.json  package.json
HTLC/htlc_contract_tokenFA1_2/: deploy_htlc_FA1_2.ts  htlc_contract_FA1_2.ligo  htlc_contract_FA1_2.tz  kambda_function_for_transfer_fa1_2.json  lambda_function_FA1_2.tz  lambda_function_for_transfer_fa1_2.ligo  lambda_function_for_transfer_fa1_2.tz  lamdba_function.json  readme.md  test_htlc_contract_fa1_2.ts  test_lambda_function_FA1_2.ts
HTLC/lambda_function_for_coin/: Readme.md  call_entrypoint_lambda_function.ts  lambda_function.json  lambda_function.ligo  lambda_function.tz
HTLC/lambda_function_for_tokens/: Readme.md  call_entrypoint_lambda_function.ts  convert_michelson.ts  lambda_function.ligo  lambda_function_for_tokens.json  lambda_function_for_tokens.tz
HTLC/lambda_function_for_tokens.ts/: Readme.md  call_entrypoint_lambda_function.ts  example_lambda_function.cameligo
HTLC/test_lambda_function_for_multisig/: readme.md  test_for_coins.ts  test_for_token.ts
HTLC/лямбда функция для токенов/: lambda_function.pascaligo
R&D/atomic-swaps/: README.md  Untitled Diagram.drawio  scheme.md
Research/: README.md
Research/atomic-swaps/: README.md  Untitled Diagram.drawio  scheme.md
Research/multisig/: Account.json  README.md  Readme_links.md  Schema_multisik_tokens2.ts  TokenMultisig.ts  accaunt.txt  account.txt  call_multisig.ts  call_multisig1.ts  call_multisig2.ts  call_multisig2_copy.ts  call_multisig3.ts  contract_get_schema.ts  deploy_multisig.ts  multisig.json  multisig_TQtezos.md  multisig_parameter.ts  multisig_tezos-client.md  package-lock.json  package.json  schema1.ts  schema2.ts  schema_msig_coin.ts  scheme.md  test.ts
Research/receiveComments/: Comment.ts  README.md  Smart_contract2.pascaligo  (+3 more)
Smart_Contract/: Comment.ts  Smart_contract.pascalligo  Smart_contract1.pascaligo  Smart_contract1.pascalligo  accaunt.txt  multisig_TQtezos.md  multisig_tezos-client.md  readme.md
ZKP/: README.md
data/: tezos.md  tip_difference.md
docs/: CNAME  README.md  index.html  main.120cfb15cbb6f750.js  main.e3e00859dfd66644.js  polyfills.e3927f2a26423bdc.js  runtime.7240acfdc305ef9b.js
landing/: index.html
relay/: README.md  create_2000.ts  types.ts  wallaby.js
rust/: readme.md  reports.md
rust batch listener/: readme.md  reports.md
rust tezos+everscale/: readme.md
rust tezos+everscale/tezos_everscale/: Cargo.toml  everscale_accounts.json  result.json  run_config.json
rust tezos+everscale/tezos_everscale/dependencies/explorer_api/: Cargo.toml
rust tezos+everscale/tezos_everscale/dependencies/json/: HelloWallet.abi.json  config.json  everscale_accounts.json  htlc1_keys.json  wallet1.scmsig1.json  wallet1.scmsig2.json  wallet2.scmsig3.json  wallet3.scmsig1.json  wallet3.scmsig2.json  wallet3.scmsig3.json
rust tezos+everscale/tezos_everscale/dependencies/lib/: Cargo.toml
rust tezos+everscale/tezos_everscale/dependencies/lib/src/: functions.rs  lib.rs  tezos_batch.rs
rust tezos+everscale/tezos_everscale/dependencies/lib/src/commands/: delegate_local.rs  mod.rs  originate.rs  transfer.rs
rust tezos+everscale/tezos_everscale/dependencies/lib/src/commands/address/: get_address.rs
rust tezos+everscale/tezos_everscale/dependencies/lib/src/common/: estimate_gas_consumption.rs
rust tezos+everscale/tezos_everscale/dependencies/lib/src/common/operation_command/: mod.rs
rust tezos+everscale/tezos_everscale/dependencies/rpc_api/: Cargo.toml
rust tezos+everscale/tezos_everscale/dependencies/rpc_api/src/api/operation/: forge_operations.rs
rust tezos+everscale/tezos_everscale/dependencies/ureq/src/: body.rs  request.rs
rust tezos+everscale/tezos_everscale/dependencies/urequ/src/: agent.rs
rust tezos+everscale/tezos_everscale/dependencies/utils/: Cargo.toml
rust tezos+everscale/tezos_everscale/src/: functions.rs  main.rs  tezos_send_transaction.rs
rust token listener/: .gitignore  reports.md
rust/listener/: Cargo.toml  config.json
rust/listener/src/: main.rs
rust/test/: Cargo.toml  config.json  result.json
rust/test/src/: main.rs
rust_everscale/: readme.md  reports.md
rust_everscale/check_balance/: Cargo.toml  config.json
rust_everscale/check_balance/src/: main.rs
rust_everscale/getCustodians/: Cargo.toml  config.json  contract.abi.json
rust_everscale/getCustodians/src/: main.rs
rust_everscale/getCustodians/src/tonos/: call.rs  helpers.rs  mod.rs
rust_everscale/sc_methods/: Cargo.toml  config.json  run_config.json  transaction.json  wallet.scmsig3.json
rust_everscale/sc_methods/src/: functions.rs  main.rs
rust_everscale/sc_methods/src/bin_/: get_custodians.rs  submit_transaction.rs
rust_everscale/sc_methods/src/bin_/tonos/: call.rs  config.rs  crypto.rs  helpers.rs
rust_everscale_tezos/: README.md
rust_listener/: .gitignore  Everscale_Wallets.md  LICENSE  README.md
taquito_test/: package-lock.json  package.json  taquto_method.ts
(+342 files in other folders)
