[package]
name = "listener"
version = "0.1.0"
edition = "2018"

[dependencies]
serde_json = "1.0.79"
serde = "1.0.136"
# actix-web = "3.3.3"
# actix-rt = "2.6.0"
# serde = "1.0.114"
# # simple_logger = "1.6.0"
# simple_logger = { package = "slogger", path = "../slogger" }
# log = "0.4.8"
# # pam = "0.7.0"