[package]
name = "main"
version = "0.1.0"
edition = "2018"
authors = ["javaharlalnehru"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

#[[bin]]
#name = "tezedge-client"
#path = "src/bin/main.rs"

[dependencies]
http_req = {version="^0.8", default-features = false, features = ["rust-tls"]}
# reqwest = "0.11"
tokio = {version="1.12.0", features=["full"]}

# structopt = "0.3.21"
thiserror = "1.0.24"
serde = { version = "1.0.123", features = ["derive"] }
crypto = { path = "../crypto" }
lib = { path = "../lib" }
emojies = { package = "cli_emojies", path = "../cli_emojies" }
cli_spinner = { path = "../cli_spinner" }
structopt = "0.3.21"
console = "0.14.0"
dialoguer = "0.8"

[dependencies.url]
version = "2"
