[package]
name = "main"
version = "0.1.0"
edition = "2018"
authors = ["javaharlalnehru"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

#[[bin]]
#name = "tezedge-client"
#path = "src/bin/main.rs"

[dependencies]
ureq = { path = "../urequ" }
json = "0.12.4"

[dependencies.url]
version = "2"
