[package]
name = "check_balance"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = "1.0.41"
tokio = { features = [ "rt-threaded", "macros", "sync" ], version = "*" }
ton_client = { path = "../ton_client" }
ureq = { version = "2.4.0", features = ["json"] }
