[package]
name = "everscale_sc_method"
version = "0.1.0"
authors = ["javaharlalnehru <grechanichenkos@yandex.ru>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ton_types = { git = 'https://github.com/tonlabs/ton-labs-types.git', tag = '1.10.12' }
ton_block = { git = 'https://github.com/tonlabs/ton-labs-block.git', tag = '1.7.38' }
ton_abi = { git = 'https://github.com/tonlabs/ton-labs-abi.git', tag = '2.1.11' }
tokio = { features = [ "rt-threaded", "macros", "sync" ], version = "*" }
ton_client = { git = "https://github.com/tonlabs/TON-SDK" }
serde = { features = [ 'derive' ], version = '1.0' }
log = { features = [ 'std' ], version = '0.4.11' }
serde_json = "1.0.41"
lazy_static = '1.4.0'
base64 = '0.13.0'
qr2term = '0.3.0'
regex = '1.5.4'
chrono = '0.4'
hex = '0.4.3'
sha2 = '0.8'
clap = '2.32'
