[package]
name = "lib"
version = "0.1.0"
authors = ["Zura Benashvili <zura.benashvili@gmail.com>"]
edition = "2018"

[dependencies]
crypto = { path = "../crypto" }
utils = { path = "../utils" }
types = { path = "../types" }
signer = { path = "../signer" }
rpc_api = { path = "../rpc_api" }
explorer_api = { path = "../explorer_api" }
# trezor_api = { path = "../trezor_api" }
# ledger_api = { path = "../ledger_api" }
ton_client = { git = "https://github.com/tonlabs/TON-SDK" }
hex = '0.4.3'
dialoguer = "0.8"
chrono = '0.4'
structopt = "0.3.21"
lazy_static = '1.4.0'
ton_block = { git = 'https://github.com/tonlabs/ton-labs-block.git', tag = '1.7.38' }
log = { features = [ 'std' ], version = '0.4.11' }
base64 = '0.13.0'
ton_types = { git = 'https://github.com/tonlabs/ton-labs-types.git', tag = '1.10.12' }
console = "0.14.0"
serde = { version = "1.0.123", features = ["derive"] }
serde_json = "1.0.62"
ureq = { path = "../ureq", features = ["json"] }
sodiumoxide = "=0.2.6"
base58 = "0.1.0"
# rust_decimal = "1.10.3"
thiserror = "1.0.24"
